[package]
name = "siiir_points"
description = "Data structures representing points in 2D & 3D space."

license = "MIT"
repository = "https://github.com/Siiir/siiir_points"

version = "0.1.1-beta"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
num-traits = {version="0.2.15", features=["i128"]}
